--- a/IR_Sender/BoardA.uvprojx
+++ b/IR_Sender/BoardA.uvprojx
@@ -48,7 +48,7 @@
             <InvalidFlash>1</InvalidFlash>
           </TargetStatus>
           <OutputDirectory>.\Objects\</OutputDirectory>
-          <OutputName>MiniProject</OutputName>
+          <OutputName>BoardA</OutputName>
           <CreateExecutable>1</CreateExecutable>
           <CreateLib>0</CreateLib>
           <CreateHexFile>0</CreateHexFile>
