Added IR related files to project

--- a/IR_Sender/BoardA.uvprojx
+++ b/IR_Sender/BoardA.uvprojx
@@ -10,6 +10,7 @@
       <TargetName>Target 1</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
+      <pCCUsed>6160000::V6.16::ARMCLANG</pCCUsed>
       <uAC6>1</uAC6>
       <TargetOption>
         <TargetCommonOption>
@@ -388,9 +389,14 @@
               <FilePath>.\src\main.c</FilePath>
             </File>
             <File>
-              <FileName>placeholder.c</FileName>
+              <FileName>IR.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\src\placeholder.c</FilePath>
+              <FilePath>.\src\IR.c</FilePath>
+            </File>
+            <File>
+              <FileName>LEDs.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\LEDs.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -398,9 +404,19 @@
           <GroupName>Include Files</GroupName>
           <Files>
             <File>
-              <FileName>placeholder.h</FileName>
+              <FileName>user_defs.h</FileName>
               <FileType>5</FileType>
-              <FilePath>.\inc\placeholder.h</FilePath>
+              <FilePath>.\inc\user_defs.h</FilePath>
+            </File>
+            <File>
+              <FileName>IR.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\inc\IR.h</FilePath>
+            </File>
+            <File>
+              <FileName>LEDs.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\inc\LEDs.h</FilePath>
             </File>
           </Files>
         </Group>
