--- a/IR_Sender/BoardA.uvprojx
+++ b/IR_Sender/BoardA.uvprojx
@@ -408,6 +408,21 @@
               <FileType>1</FileType>
               <FilePath>.\src\UART.c</FilePath>
             </File>
+            <File>
+              <FileName>timers.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\timers.c</FilePath>
+            </File>
+            <File>
+              <FileName>LCD_4bit.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\LCD_4bit.c</FilePath>
+            </File>
+            <File>
+              <FileName>delay.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\delay.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -437,6 +452,21 @@
               <FileName>UART.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\inc\UART.h</FilePath>
+            </File>
+            <File>
+              <FileName>timers.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\inc\timers.h</FilePath>
+            </File>
+            <File>
+              <FileName>LCD_4bit.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\inc\LCD_4bit.h</FilePath>
+            </File>
+            <File>
+              <FileName>delay.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\inc\delay.h</FilePath>
             </File>
           </Files>
         </Group>
