adding button functionality

--- a/LCD_Receiver/BoardB.uvprojx
+++ b/LCD_Receiver/BoardB.uvprojx
@@ -408,6 +408,11 @@
               <FileType>1</FileType>
               <FilePath>.\src\queue.c</FilePath>
             </File>
+            <File>
+              <FileName>switches.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\switches.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -437,6 +442,11 @@
               <FileName>queue.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\inc\queue.h</FilePath>
+            </File>
+            <File>
+              <FileName>switches.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\inc\switches.h</FilePath>
             </File>
           </Files>
         </Group>
