--- a/LCD_Receiver/BoardB.uvprojx
+++ b/LCD_Receiver/BoardB.uvprojx
@@ -339,7 +339,7 @@
               <MiscControls></MiscControls>
               <Define></Define>
               <Undefine></Undefine>
-              <IncludePath>.\inc</IncludePath>
+              <IncludePath>.\inc;..\common\inc</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -384,30 +384,25 @@
           <GroupName>Source Files</GroupName>
           <Files>
             <File>
+              <FileName>main.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\main.c</FilePath>
+            </File>
+            <File>
               <FileName>delay.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\src\delay.c</FilePath>
+              <FilePath>..\common\src\delay.c</FilePath>
             </File>
             <File>
               <FileName>LCD_4bit.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\src\LCD_4bit.c</FilePath>
-            </File>
-            <File>
-              <FileName>main.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\src\main.c</FilePath>
+              <FilePath>..\common\src\LCD_4bit.c</FilePath>
             </File>
           </Files>
         </Group>
         <Group>
           <GroupName>Include Files</GroupName>
           <Files>
-            <File>
-              <FileName>delay.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\inc\delay.h</FilePath>
-            </File>
             <File>
               <FileName>gpio_defs.h</FileName>
               <FileType>5</FileType>
@@ -416,7 +411,12 @@
             <File>
               <FileName>LCD_4bit.h</FileName>
               <FileType>5</FileType>
-              <FilePath>.\inc\LCD_4bit.h</FilePath>
+              <FilePath>..\common\inc\LCD_4bit.h</FilePath>
+            </File>
+            <File>
+              <FileName>delay.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\common\inc\delay.h</FilePath>
             </File>
           </Files>
         </Group>
