pushing for posterity

--- a/LCD_Receiver/BoardB.uvprojx
+++ b/LCD_Receiver/BoardB.uvprojx
@@ -504,4 +504,13 @@
     </files>
   </RTE>
 
+  <LayerInfo>
+    <Layers>
+      <Layer>
+        <LayName>BoardB</LayName>
+        <LayPrjMark>1</LayPrjMark>
+      </Layer>
+    </Layers>
+  </LayerInfo>
+
 </Project>
