fix file mappings

--- a/LCD_Receiver/BoardB.uvprojx
+++ b/LCD_Receiver/BoardB.uvprojx
@@ -399,19 +399,19 @@
               <FilePath>..\common\src\LCD_4bit.c</FilePath>
             </File>
             <File>
-              <FileName>UART.c</FileName>
+              <FileName>switches.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\src\UART.c</FilePath>
+              <FilePath>.\src\switches.c</FilePath>
+            </File>
+            <File>
+              <FileName>uart.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\common\src\uart.c</FilePath>
             </File>
             <File>
               <FileName>queue.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\src\queue.c</FilePath>
-            </File>
-            <File>
-              <FileName>switches.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\src\switches.c</FilePath>
+              <FilePath>..\common\src\queue.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -434,19 +434,19 @@
               <FilePath>..\common\inc\delay.h</FilePath>
             </File>
             <File>
-              <FileName>UART.h</FileName>
+              <FileName>switches.h</FileName>
               <FileType>5</FileType>
-              <FilePath>.\inc\UART.h</FilePath>
+              <FilePath>.\inc\switches.h</FilePath>
+            </File>
+            <File>
+              <FileName>uart.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\common\inc\uart.h</FilePath>
             </File>
             <File>
               <FileName>queue.h</FileName>
               <FileType>5</FileType>
-              <FilePath>.\inc\queue.h</FilePath>
-            </File>
-            <File>
-              <FileName>switches.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\inc\switches.h</FilePath>
+              <FilePath>..\common\inc\queue.h</FilePath>
             </File>
           </Files>
         </Group>
