--- a/LCD_Receiver/BoardB.uvprojx
+++ b/LCD_Receiver/BoardB.uvprojx
@@ -399,11 +399,6 @@
               <FilePath>..\common\src\LCD_4bit.c</FilePath>
             </File>
             <File>
-              <FileName>UART.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\src\UART.c</FilePath>
-            </File>
-            <File>
               <FileName>queue.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\src\queue.c</FilePath>
@@ -412,6 +407,11 @@
               <FileName>switches.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\src\switches.c</FilePath>
+            </File>
+            <File>
+              <FileName>uart.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\common\src\uart.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -434,11 +434,6 @@
               <FilePath>..\common\inc\delay.h</FilePath>
             </File>
             <File>
-              <FileName>UART.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\inc\UART.h</FilePath>
-            </File>
-            <File>
               <FileName>queue.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\inc\queue.h</FilePath>
@@ -447,6 +442,11 @@
               <FileName>switches.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\inc\switches.h</FilePath>
+            </File>
+            <File>
+              <FileName>uart.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\common\inc\uart.h</FilePath>
             </File>
           </Files>
         </Group>
