--- a/tests/agent-test/agent-test.uvprojx
+++ b/tests/agent-test/agent-test.uvprojx
@@ -49,7 +49,7 @@
             <InvalidFlash>1</InvalidFlash>
           </TargetStatus>
           <OutputDirectory>.\Objects\</OutputDirectory>
-          <OutputName>BoardA</OutputName>
+          <OutputName>agent-test</OutputName>
           <CreateExecutable>1</CreateExecutable>
           <CreateLib>0</CreateLib>
           <CreateHexFile>0</CreateHexFile>
@@ -89,7 +89,7 @@
             <nStopA1X>0</nStopA1X>
             <nStopA2X>0</nStopA2X>
           </AfterMake>
-          <SelectedForBatchBuild>0</SelectedForBatchBuild>
+          <SelectedForBatchBuild>1</SelectedForBatchBuild>
           <SVCSIdString></SVCSIdString>
         </TargetCommonOption>
         <CommonProperty>
@@ -110,11 +110,11 @@
         </CommonProperty>
         <DllOption>
           <SimDllName>SARMCM3.DLL</SimDllName>
-          <SimDllArguments></SimDllArguments>
+          <SimDllArguments>  </SimDllArguments>
           <SimDlgDll>DARMCM1.DLL</SimDlgDll>
           <SimDlgDllArguments>-pCM0+</SimDlgDllArguments>
           <TargetDllName>SARMCM3.DLL</TargetDllName>
-          <TargetDllArguments></TargetDllArguments>
+          <TargetDllArguments> </TargetDllArguments>
           <TargetDlgDll>TARMCM1.DLL</TargetDlgDll>
           <TargetDlgDllArguments>-pCM0+</TargetDlgDllArguments>
         </DllOption>
@@ -134,11 +134,11 @@
             <RunIndependent>0</RunIndependent>
             <UpdateFlashBeforeDebugging>1</UpdateFlashBeforeDebugging>
             <Capability>1</Capability>
-            <DriverSelection>4096</DriverSelection>
+            <DriverSelection>-1</DriverSelection>
           </Flash1>
           <bUseTDR>1</bUseTDR>
           <Flash2>BIN\UL2CM3.DLL</Flash2>
-          <Flash3>"" ()</Flash3>
+          <Flash3></Flash3>
           <Flash4></Flash4>
           <pFcarmOut></pFcarmOut>
           <pFcarmGrp></pFcarmGrp>
@@ -328,7 +328,7 @@
             <uC99>0</uC99>
             <uGnu>0</uGnu>
             <useXO>0</useXO>
-            <v6Lang>5</v6Lang>
+            <v6Lang>3</v6Lang>
             <v6LangP>3</v6LangP>
             <vShortEn>1</vShortEn>
             <vShortWch>1</vShortWch>
@@ -339,7 +339,7 @@
               <MiscControls></MiscControls>
               <Define></Define>
               <Undefine></Undefine>
-              <IncludePath>./inc;..libserial/inc;..\common\inc</IncludePath>
+              <IncludePath>.\inc;..\..\libserial\inc;..\..\common\inc</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -388,55 +388,15 @@
               <FileType>1</FileType>
               <FilePath>.\src\main.c</FilePath>
             </File>
-            <File>
-              <FileName>IR.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\src\IR.c</FilePath>
-            </File>
-            <File>
-              <FileName>timers.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\src\timers.c</FilePath>
-            </File>
-            <File>
-              <FileName>LCD_4bit.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\common\src\LCD_4bit.c</FilePath>
-            </File>
-            <File>
-              <FileName>LEDs.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\common\src\LEDs.c</FilePath>
-            </File>
           </Files>
         </Group>
         <Group>
           <GroupName>inc</GroupName>
           <Files>
             <File>
-              <FileName>user_defs.h</FileName>
+              <FileName>placeholder.h</FileName>
               <FileType>5</FileType>
-              <FilePath>.\inc\user_defs.h</FilePath>
-            </File>
-            <File>
-              <FileName>IR.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\inc\IR.h</FilePath>
-            </File>
-            <File>
-              <FileName>timers.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\inc\timers.h</FilePath>
-            </File>
-            <File>
-              <FileName>LCD_4bit.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\common\inc\LCD_4bit.h</FilePath>
-            </File>
-            <File>
-              <FileName>LEDs.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\common\inc\LEDs.h</FilePath>
+              <FilePath>.\placeholder.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -446,7 +406,7 @@
             <File>
               <FileName>libserial.lib</FileName>
               <FileType>4</FileType>
-              <FilePath>..\libserial\Objects\libserial.lib</FilePath>
+              <FilePath>..\..\libserial\Objects\libserial.lib</FilePath>
             </File>
           </Files>
         </Group>
@@ -503,5 +463,14 @@
       </file>
     </files>
   </RTE>
+
+  <LayerInfo>
+    <Layers>
+      <Layer>
+        <LayName>agent-test</LayName>
+        <LayPrjMark>1</LayPrjMark>
+      </Layer>
+    </Layers>
+  </LayerInfo>
 
 </Project>
