--- a/libserial/libserial.uvprojx
+++ b/libserial/libserial.uvprojx
@@ -394,9 +394,19 @@
               <FilePath>.\src\queue.c</FilePath>
             </File>
             <File>
+              <FileName>i2c.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\drivers\i2c.c</FilePath>
+            </File>
+            <File>
+              <FileName>spi.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\drivers\spi.c</FilePath>
+            </File>
+            <File>
               <FileName>uart.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\src\uart.c</FilePath>
+              <FilePath>.\src\drivers\uart.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -417,6 +427,16 @@
               <FileName>uart.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\inc\drivers\uart.h</FilePath>
+            </File>
+            <File>
+              <FileName>i2c.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\inc\drivers\i2c.h</FilePath>
+            </File>
+            <File>
+              <FileName>spi.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\inc\drivers\spi.h</FilePath>
             </File>
           </Files>
         </Group>
