Updated lib settings in tests for hassel free development

--- a/tests/agent-test/agent-test.uvprojx
+++ b/tests/agent-test/agent-test.uvprojx
@@ -407,6 +407,25 @@
               <FileName>libserial.lib</FileName>
               <FileType>4</FileType>
               <FilePath>..\..\libserial\Objects\libserial.lib</FilePath>
+              <FileOption>
+                <CommonProperty>
+                  <UseCPPCompiler>2</UseCPPCompiler>
+                  <RVCTCodeConst>0</RVCTCodeConst>
+                  <RVCTZI>0</RVCTZI>
+                  <RVCTOtherData>0</RVCTOtherData>
+                  <ModuleSelection>1</ModuleSelection>
+                  <IncludeInBuild>2</IncludeInBuild>
+                  <AlwaysBuild>2</AlwaysBuild>
+                  <GenerateAssemblyFile>2</GenerateAssemblyFile>
+                  <AssembleAssemblyFile>2</AssembleAssemblyFile>
+                  <PublicsOnly>2</PublicsOnly>
+                  <StopOnExitCode>11</StopOnExitCode>
+                  <CustomArgument></CustomArgument>
+                  <IncludeLibraryModules>delay.o|1|0|0|0,queue.o|1|0|0|0,i2c.o|1|0|0|0,spi.o|1|0|0|0,uart.o|1|0|0|0</IncludeLibraryModules>
+                  <ComprImg>1</ComprImg>
+                </CommonProperty>
+                <FileArmAds/>
+              </FileOption>
             </File>
           </Files>
         </Group>
