--- a/tests/master-test/master-test.uvprojx
+++ b/tests/master-test/master-test.uvprojx
@@ -388,6 +388,11 @@
               <FileType>1</FileType>
               <FilePath>.\src\main.c</FilePath>
             </File>
+            <File>
+              <FileName>LCD_4bit.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\LCD_4bit.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -397,6 +402,11 @@
               <FileName>placeholder.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\placeholder.h</FilePath>
+            </File>
+            <File>
+              <FileName>lcd_4bit.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\inc\lcd_4bit.h</FilePath>
             </File>
           </Files>
         </Group>
